; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_attributes.c_xsltNewAttrSet.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libxslt/extr_attributes.c_xsltNewAttrSet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xsltGenericErrorContext = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"xsltNewAttrSet : malloc failed\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @xsltNewAttrSet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @xsltNewAttrSet() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = call i64 @xmlMalloc(i32 4)
  %4 = inttoptr i64 %3 to i32*
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load i32, i32* @xsltGenericErrorContext, align 4
  %9 = call i32 @xsltGenericError(i32 %8, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  store i32* null, i32** %1, align 8
  br label %14

10:                                               ; preds = %0
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @memset(i32* %11, i32 0, i32 4)
  %13 = load i32*, i32** %2, align 8
  store i32* %13, i32** %1, align 8
  br label %14

14:                                               ; preds = %10, %7
  %15 = load i32*, i32** %1, align 8
  ret i32* %15
}

declare dso_local i64 @xmlMalloc(i32) #1

declare dso_local i32 @xsltGenericError(i32, i8*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
